# qt-project-template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  sonar-project.properties
.devcontainer/: Dockerfile  devcontainer.env  devcontainer.json
.github/workflows/: ci.yml  codeql-analysis.yml  sonarqube-analysis.yml
cmake/: CPM.cmake  Cache.cmake  CodeCoverage.cmake  CompilationFlags.cmake  CompilerWarnings.cmake  Dependencies.cmake  Doxygen.cmake  Options.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  Utilities.cmake  Version.cmake
src/: CMakeLists.txt  config.h.in  main.cpp  pch.h
src/core/: application.cpp  application.h  base.h  logger.h  namespace.h  parameters.h  project.cpp  project.h  project_manager.cpp  project_manager.h  settings.cpp  settings.h  singleton.h
src/items/: wall.cpp  wall.h
src/utils/: math_utils.cpp  math_utils.h
src/widgets/: create_project_dialog.cpp  create_project_dialog.h  graphics_scene.cpp  graphics_scene.h  graphics_view.cpp  graphics_view.h  main_window.cpp  main_window.h  mainwindow.cpp  mainwindow.h  settings_dialog.cpp  settings_dialog.h  tool_bar.cpp  tool_bar.h  toolbar.cpp
tests/: CMakeLists.txt
